--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+   <header>
+    <h1>Ruby on Rails スクジュール管理アプリ</h1>
+   </header>
+   <%= yield %>
+   <footer>
+   <h1>現在の日時：<%= Date.current.strftime('%Y年 %m月 %d日')%> スケジュールの合計：<%= Post.count%></h1>
+   </footer>
   </body>
 </html>
